fixing responsiveness on mobile with background positioning

--- a/src/components/pages/Hero/HeroSection.css
+++ b/src/components/pages/Hero/HeroSection.css
@@ -11,7 +11,7 @@ video {
 }
 
 .hero-container {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   display: flex;
   flex-direction: column;
